@@ -35,5 +35,5 @@ using System.Runtime.InteropServices;
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
 
-[assembly: AssemblyVersion("1.0.322.0")]
-[assembly: AssemblyFileVersion("1.0.322.0")]
+[assembly: AssemblyVersion("1.0.323.0")]
+[assembly: AssemblyFileVersion("1.0.323.0")]
